Squashed. All changes from Jun to Sep
Change-Id: If3b45dcdaa9a893674cf8d86690bde3aefd6aebf

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -260,4 +260,7 @@
     <string name="app_profile_old_links_title">A11 cсылки в приложении</string>
     <string name="app_profile_old_links_summary">Использовать старое поведения при открытии ссылок этим приложением</string>
 
+    <string name="app_profile_priv_phone_state_title">Привилегированный доступ</string>
+    <string name="app_profile_priv_phone_state_summary">Разрешить этому приложению доступ к привилегированной информации (deviceid, IMEI, etc...)</string>
+
 </resources>
