--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -171,6 +171,7 @@
     	<item>Pixel 5</item>                <!-- 8 -->
     	<item>Pixel 6 Pro</item>            <!-- 17 -->
     	<item>Pixel 7 Pro</item>           <!-- 24 -->
+    	<item>Pixel 8 Pro</item>           <!-- 33 -->
     	<item>Pixel Tablet</item>           <!-- 31 -->
     	<item>Pixel Fold</item>           <!-- 32 -->
     	<item>OnePlus 8T</item>             <!-- 10 -->
@@ -207,6 +208,7 @@
     	<item>8</item>
     	<item>17</item>
     	<item>24</item>
+    	<item>33</item>
     	<item>31</item>
     	<item>32</item>
     	<item>10</item>
@@ -234,7 +236,7 @@
     	<item>@string/location_network_fine</item>
     	<item>@string/location_network_coarse</item>
     	<item>@string/location_passive</item>
-    	<item>@string/location_none</item>
+    	<!-- item>@string/location_none</item -->
     </string-array>
 
     <string-array name="location_listvalues">
@@ -243,7 +245,7 @@
     	<item>2</item>
     	<item>3</item>
     	<item>4</item>
-    	<item>5</item>
+    	<!-- item>5</item -->
     </string-array>
 
     <string-array name="camera_listentries">
