--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -217,6 +217,14 @@
             android:defaultValue="false" />
 
         <ListPreference
+            android:key="app_profile_location"
+            android:title="@string/app_profile_location_title"
+            android:entries="@array/location_listentries"
+            android:entryValues="@array/location_listvalues"
+            android:defaultValue="0"
+            android:summary="%s" />
+
+        <ListPreference
             android:key="app_profile_force_sonification"
             android:title="@string/app_sound_sonif_a2dp_title"
             android:entries="@array/app_sonif_a2dp_listentries"
@@ -295,6 +303,12 @@
             android:entryValues="@array/file_access_listvalues"
             android:defaultValue="default"
             android:summary="%s" />
+
+        <SwitchPreference
+            android:key="app_profile_priv_phone_state"
+            android:title="@string/app_profile_priv_phone_state_title"
+            android:summary="@string/app_profile_priv_phone_state_summary"
+            android:defaultValue="false" />
     
     </PreferenceCategory>
 
