Squashed changes by 20241011
Change-Id: Id82df440bdb5091fe801660aa3d40d0db01dc9b4

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -52,6 +52,7 @@
     <string name="rotation_auto">Автоматически</string>
     <string name="background_restrictions_super">Супер</string>
     <string name="background_restrictions_unlimited">Неограниченный</string>
+    <string name="background_restrictions_auto">Автоматически</string>
     <string name="background_restrictions_default">По умолчанию</string>
     <string name="background_restrictions_limited">Ограниченный</string>
     <string name="background_restrictions_restricted">Заблокированный</string>
