--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -73,6 +73,7 @@
 
     <string name="background_restrictions_super">Super</string>
     <string name="background_restrictions_unlimited">Unlimited</string>
+    <string name="background_restrictions_auto">Auto</string>
     <string name="background_restrictions_default">Default</string>
     <string name="background_restrictions_limited">Limited</string>
     <string name="background_restrictions_restricted">Restricted</string>
